# async-python-sprint-1

./: .gitignore  README.md  api_client.py  api_test.py  constants.py  forecasting.py  pyproject.toml  requirements.txt  schemas.py  setting_log.py  setup.cfg  tasks.py
.github/workflows/: app-testing.yml
examples/: conditions.txt  response.json
tests/: conftest.py  pyproject.toml  test_tasks.py
